[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "garmin-connect-prom-exporter"
description = "Collect daily metrics from Garmin Connect and push them to Prometheus"
dynamic = ["version"]
dependencies = [
    "garth >=0.4.41",
    "prometheus-client >= 0.19.0",
]

[project.optional-dependencies]
dev = [
    "pylint"
]

[project.urls]
Home = "https://github.com/astromechza/garmin-connect-prom-exporter"
